<resources>
    <string name="app_name">My Application</string>
    <string name="default_button">Default</string>
    <string name="text_button">Text button</string>
    <string name="outlined_button_icon">Outlined button with icon</string>
    <string name="default_button_icon">Default button with icon</string>
    <string-array name="country">
        <item>India</item>
        <item>US</item>
        <item>Canada</item>
        <item>Switzerland</item>
    </string-array>
    <string name="hello_first_fragment">First fragment</string>
    <string name="hello_second_fragment">Second fragment</string>
    <string name="hello_third_fragment">Third fragment</string>
    <string name="dummy_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
    Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.

The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
    </string>
    <string name="dummy_text_sentence_short"> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Scelerisque viverra mauris in aliquam sem fringilla ut. </string>
    <string name="app_compat_button">App compat button</string>
    <string name="status">Status</string>
    <string name="chats">Chats</string>
    <string name="button">Button</string>
    <string name="toast">Toast</string>
    <string name="toggle">Toggle</string>
    <string name="image_button">Image button</string>
    <string name="checkbox">Checkbox</string>
    <string name="floating_action_button">Floating action button</string>
    <string name="snackbar">Snackbar</string>
    <string name="text_input_layout">Text input layout</string>
    <string name="tab_layout">Tab layout</string>
    <string name="app_bar_collapsable_design">App bar collapsable design</string>
    <string name="linear_layout">Linear layout</string>
    <string name="relative_layout">Relative Layout</string>
    <string name="constraint_layout_design">Constraint Layout Design</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="frame_layout">Frame Layout</string>
    <string name="grid_layout_project">Grid Layout project</string>
    <string name="frame_layout_fragments">Frame Layout - Fragments</string>
    <string name="coordinate_layout">Coordinate Layout</string>
    <string name="navigation_host">Navigation Host</string>
    <string name="calls">Calls</string>
    <string name="new_application">New Application</string>
    <string name="back">Back</string>
    <string name="create_an_application_for_the_hosts_indicating_all_the_neccessary_living_conditions">Create an application for the hosts indicating all the necessary living conditions</string>
    <string name="destination">Destination</string>
    <string name="nights">Nights</string>
    <string name="apr_18_2023">Apr 18, 2023</string>
    <string name="_08">08</string>
    <string name="guests">Guests</string>
    <string name="bedrooms">Bedrooms</string>
    <string name="_02">02</string>
    <string name="_03">03</string>
    <string name="select_type">Select type</string>
    <string name="any_type">Any type</string>
    <string name="create_application">Create Application</string>
    <string name="contacts">Contacts</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="third">Third</string>
    <string name="next">Next</string>
    <string name="title_1">Title 1</string>
    <string name="title_2">Title 2</string>
    <string name="title_3">Title 3</string>
    <string name="_4">4</string>
    <string name="good_morning">Good morning</string>
    <string name="marcus_white">Marcus white</string>
    <string name="san_francisco_ca">San francisco, CA</string>
    <string name="all_products">All Products</string>
    <string name="show_all">Show all</string>
    <string name="default_nparent_top">Default - \nparent top</string>
    <string name="default_nparent_bottom">Default - \nparent bottom</string>
    <string name="parent_end">parent end</string>
    <string name="parent_end_n_amp_bottom"><![CDATA[parent end \n & bottom]]></string>
    <string name="center_parent">center parent</string>
    <string name="center_vertical">center vertical</string>
    <string name="center_vertical_n_amp_end"><![CDATA[center vertical \n & end]]></string>
    <string name="center_horizontally">center horizontally</string>
    <string name="center_horizontally_n_amp_parent_end"><![CDATA[center horizontally \n& parent end]]></string>
    <string name="end_of_start_of">end of - start of</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="default_snackbar">Default snackbar</string>
    <string name="snackbar_with_action">Snackbar with action</string>
    <string name="button_information">button information</string>
    <string name="test_ripple_button">test ripple button</string>
    <string name="ripple_button">Ripple button</string>
    <string name="see_list_of_items">see list of items</string>
    <string name="title_4">Title 4</string>
    <string name="text_input_hint">Text input hint</string>
    <string name="edit_text_hint">edit text hint</string>
    <string name="text_input_floating_hint">Text input floating hint</string>
    <string name="default_toast">Default toast</string>
    <string name="toast_left">Toast Left</string>
    <string name="custom_toast">Custom Toast</string>
    <string name="guest_signup">Guest signup KT Screen</string>
    <string name="guest_location_details">Guest location details</string>
    <string name="group_1">Group 1</string>
    <string name="group_2">Group 2</string>
    <string name="group_3">Group 3</string>
    <string name="recycler_view_selection_lib">Recycler view selection lib</string>
    <string name="list_view">List view</string>
    <string name="expandable_recycler_view">Expandable recycler view</string>
    <string name="bottom_navigation">Bottom navigation</string>
    <string name="image_slider">Image slider</string>
    <string name="data_binding">Data binding</string>
    <string name="enter_name">Enter name</string>
    <string name="enter_job">Enter job</string>
    <string name="add">Add</string>
</resources>