<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".uiwidgets.UIWidgetsActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnToast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toast"
            android:textAllCaps="true"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnToggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/toggle"
            android:textAllCaps="true"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnImageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/image_button"
            android:textAllCaps="true"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCheckbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkbox"
            android:textAllCaps="true"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFloatingActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/floating_action_button"
            android:textAllCaps="true"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSnackbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/snackbar"
            android:textAllCaps="true"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_input_layout"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tab_layout"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_bar_collapsable_design"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/linear_layout"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/relative_layout"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/constraint_layout_design"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGridLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid_layout"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGridLayoutProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/grid_layout_project"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_layout"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFrameLayoutFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/frame_layout_fragments"
            tools:ignore="VisualLintButtonSize" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCoordinateLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/coordinate_layout"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNavigationHost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/navigation_host"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuestSignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest_signup"
            tools:ignore="VisualLintButtonSize" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuestLocationDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guest_location_details"
            tools:ignore="VisualLintButtonSize" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</ScrollView>