<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_pink"
    tools:context=".uiwidgets.RelativeLayoutActivity">

    <TextView
        android:id="@+id/txtDefaultRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:padding="4dp"
        android:text="@string/default_nparent_top"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:padding="4dp"
        android:text="@string/default_nparent_bottom"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtEndRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:background="@color/white"
        android:padding="4dp"
        android:text="@string/parent_end"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:padding="4dp"
        android:text="@string/parent_end_n_amp_bottom"
        android:textColor="@color/black"
        android:textSize="16sp" />


    <TextView
        android:id="@+id/txtCenterRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:text="@string/center_parent"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:text="@string/center_vertical"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:background="@color/white"
        android:padding="@dimen/padding"
        android:text="@string/center_vertical_n_amp_end"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/txtCenterHorizontallyRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="#29B6F6"
        android:padding="4dp"
        android:text="@string/center_horizontally"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#29B6F6"
        android:padding="4dp"
        android:text="@string/center_horizontally_n_amp_parent_end"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <Button
        android:id="@+id/btnBaseRelativeLayout"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@id/txtCenterHorizontallyRelativeLayout"
        android:layout_marginTop="64dp"
        android:layout_toStartOf="@id/txtEndRelativeLayout"
        android:layout_toEndOf="@id/txtDefaultRelativeLayout"
        android:text="@string/end_of_start_of" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/txtCenterRelativeLayout"
        android:layout_alignStart="@id/txtCenterRelativeLayout"
        android:layout_alignEnd="@id/txtCenterRelativeLayout" />

    <Button
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_above="@id/txtCenterRelativeLayout"
        android:layout_alignStart="@id/txtCenterRelativeLayout"
        android:layout_alignEnd="@id/txtCenterRelativeLayout" />

</RelativeLayout>