<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textViewName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/textViewJob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_job" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />
</androidx.appcompat.widget.LinearLayoutCompat>