<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".uiwidgets.ToastActivity">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToastDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_toast" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnToastLeft"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/toast_left" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCustomToast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/custom_toast" />

</LinearLayout>