<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="@dimen/padding"
    tools:context=".uiwidgets.SelectionControlsActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/checkboxFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/first" />

        <CheckBox
            android:id="@+id/checkboxSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#689F38"
            android:checked="false"
            android:text="@string/second"
            app:checkedState="checked" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/radioButtonGender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:buttonTint="#4CAF50"
            android:text="@string/male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:buttonTint="#4CAF50"
            android:text="@string/female" />
    </RadioGroup>
</LinearLayout>